idsa/src/k8s/broker/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-core-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-core-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: broker-fuseki-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-fuseki-app
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030

---
apiVersion: v1
kind: Service
metadata:
  name: broker-frontend-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: broker-elasticsearch-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-elasticsearch-app
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200

---
apiVersion: v1
kind: Service
metadata:
  name: broker-mongodb-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-mongodb-app
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: broker-mongodb-handler-service
  namespace: gxfs-idsa
spec:
  selector:
    app: broker-mongodb-handler-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
